<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.memtpadraomonofasico.apppadromonofsico.Atividades.RelatorioVerificacao.SelecionarMedidorActivity">

    <TextView
        android:id="@+id/SelecionarMedidor"
        android:layout_width="189dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/selecionar_medidor"
        android:textAppearance="@android:style/TextAppearance.Material.DialogWindowTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <AutoCompleteTextView
        android:id="@+id/NumSerieMedidor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/n_mero_de_s_rie"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColorLink="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SelecionarMedidor" />


    <EditText
        android:id="@+id/ModeloMedidor"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginEnd="220dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/modelo"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColorLink="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NumSerieMedidor" />

    <EditText
        android:id="@+id/fabricanteMedidor"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/fabricante"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColorLink="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NumSerieMedidor" />

    <EditText
        android:id="@+id/TensaoNominal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="210dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tens_o_nominal_v"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColorLink="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ModeloMedidor" />

    <EditText
        android:id="@+id/CorrenteNominal"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/corrente_nominal_a"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColorLink="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabricanteMedidor" />

    <RadioButton
        android:id="@+id/radioButtonEletronico"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="220dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/eletr_nico"
        android:textColorLink="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TensaoNominal" />

    <RadioButton
        android:id="@+id/RadioButtonMecanico"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="8dp"
        android:text="@string/mec_nico"
        android:textColorLink="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CorrenteNominal" />

    <EditText
        android:id="@+id/KdKe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="220dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/kd_ke"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColorLink="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButtonEletronico" />

    <EditText
        android:id="@+id/Classe"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/classe"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColorLink="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioButtonMecanico" />

    <EditText
        android:id="@+id/numElementos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="220dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/n_de_elementos"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColorLink="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KdKe" />

    <EditText
        android:id="@+id/AnoFabricacao"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ano_de_fabrica_o"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColorLink="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Classe" />

    <EditText
        android:id="@+id/PorInmetro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/portaria_inmetro"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColorLink="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AnoFabricacao" />

    <Button
        android:id="@+id/NextFase3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="220dp"
        android:background="@color/colorPrimaryDark"
        android:backgroundTint="?attr/colorPrimaryDark"
        android:elevation="2dp"
        android:text="@string/pr_ximo"
        android:textColor="@android:color/background_light"
        android:textColorLink="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
